# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  compile_commands.json  environment.c  execute.c  history.c  main.c  minishell  minishell.h  norm.sh  signal.c  test.c  testecho.c  testexit.c  textexport.c  utils.c
builtin/: cd [redo].c  cd.c  echo.c  env.c  env_util.c  exit.c  export [separate file].c  export.c  export_utils.c  pwd.c  unset.c
extra_stuff/: a.out  execute.sh  test_cd.c  test_cd[bug].c  test_echo.c  test_env.c  test_exit.c  test_export.c  test_unset.c  test_unset[redo].c  testcd.c  testecho.c  testenv.c  testexit.c  testexport.c  testpwd.c  testunset.c
include/: builtin.h  execution.h  expansion.h  minishell.h  parser.h  scanner.h
libft/: ft_isdigit.c  ft_itoa.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstlast.c  ft_lstsize.c  ft_memmove.c  ft_memset.c  ft_putnbr_fd.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strnstr.c  ft_substr.c  ft_toupper.c  libft.h
libft_42/: .gitignore  ft_atoi_base.c  ft_bzero.c  ft_calloc.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdel_back.c  ft_lstiter.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_min.c  ft_mult_strjoin.c  ft_printf.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_striteri.c  ft_strjoin.c  ft_strmapi.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  get_next_line.c
ms/: .gitignore  .gitmodules  README.md
my_minishell/: main.c
rdp_practice/: Makefile  operations.c  parse_ast.c  (+2 more)
(+237 files in other folders)
